/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared.spec;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto.spec.decorator";
option java_multiple_files = true;

// Specs for AndroidMainlineModulesCheckDecorator.
message AndroidMainlineModulesCheckDecoratorSpec {
  extend DecoratorSpec {
    optional AndroidMainlineModulesCheckDecoratorSpec ext = 1005;
  }

  repeated string mainline_module_package_name = 1 [(field_detail) = {
    help: "The mainline modules that must be preloaded in order to run the "
          "test. Any matching module preloaded on test device or this param is "
          "not set will cause the test to be executed. The test result will be "
          "marked as SKIP if none of preloaded modules match the given "
          "packages."
  }];
}
